# pyrtal

./: MANIFEST.in  README.md  setup.cfg
pyrtal/: __main__.py  main.py
pyrtal/lib/: utils.py
pyrtal/views/: duncan.py  menu.py  natalie.py
tests/: pyrtal_test.py
