[metadata]
name = pyrtal
version = attr: pyrtal.__version__
description = pyrtal
long_description = file: README.md
long_description_content_type = text/markdown
author = Natalie Fearnley
author_email = nfearnley@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
keywords = 
project_urls =
    Source=https://github.com/nfearnley/pyrtal
    Tracker=https://github.com/nfearnley/pyrtal/issues

[options]
packages = find:
python_requires = >=3.9
zip_safe = yes
include_package_data = True
install_requires =
    arcade==2.6.5

[options.extras_require]
dev =
    pytest==6.2.5
    flake8==4.0.1
    autopep8==1.6.0

[options.entry_points]
console_scripts =
    pyrtal = pyrtal.main:main

[flake8]
ignore = E501,W503
per-file-ignores =
    */__init__.py:F401,F403
